--- a/site/index.html
+++ b/site/index.html
@@ -1,10 +1,12 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<title>HELLO COURSERA!!</title>
+	<title>BOKAGIRI!!</title>
 </head>
 <body>
-<h1>hello coursera! its a great course.</h1>
+<h1>Hello pepul.
+mohit chodu
+rishiv boka</h1>
 </body>
 
 </html>
