--- a/site/index.html
+++ b/site/index.html
@@ -1,12 +1,10 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<title>BOKAGIRI!!</title>
+	<title>HELLO COURSERA!!</title>
 </head>
 <body>
-<h1>Hello pepul.
-mohit chodu
-rishiv boka</h1>
+<h1>Hello</h1>
 </body>
 
 </html>
